[package]
name = "sdmxblaze"
version = "0.1.0"
authors = ["Alex Kreidler <alexkreidler2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "sdmxblaze"
path = "lib/mod.rs"

[[bin]]
name = "sdmx"
path = "cli/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.40"
serde_json = "1.0.64"
url = "2.2.1"
querystring = "1.1.0"
